--- a/css/app.bootstrap.css
+++ b/css/app.bootstrap.css
@@ -6309,6 +6309,10 @@ button.close {
   font-size: 11px;
 }
 
+.fz12 {
+  font-size: 12px;
+}
+
 .fz13 {
   font-size: 13px;
 }
@@ -6365,12 +6369,32 @@ button.close {
   margin-top: 10px !important;
 }
 
+.mar-t-15 {
+  margin-top: 15px !important;
+}
+
+.mar-t-20 {
+  margin-top: 20px !important;
+}
+
+.mar-t-25 {
+  margin-top: 25px !important;
+}
+
+.mar-t-30 {
+  margin-top: 30px !important;
+}
+
 .mar-t-50 {
   margin-top: 50px !important;
 }
 
 .mar-t-60 {
   margin-top: 60px !important;
+}
+
+.mar-b-0 {
+  margin-bottom: 0px !important;
 }
 
 .mar-b-5 {
@@ -6385,12 +6409,12 @@ button.close {
   margin-bottom: 15px !important;
 }
 
-.mar-b-25 {
-  margin-bottom: 25px !important;
-}
-
 .mar-b-20 {
   margin-bottom: 20px !important;
+}
+
+.mar-b-25 {
+  margin-bottom: 25px !important;
 }
 
 .mar-b-30 {
@@ -6405,8 +6429,16 @@ button.close {
   margin-bottom: 40px !important;
 }
 
+.mar-b-45 {
+  margin-bottom: 45px !important;
+}
+
 .mar-b-50 {
   margin-bottom: 50px !important;
+}
+
+.mar-b-55 {
+  margin-bottom: 55px !important;
 }
 
 .mar-b-60 {
@@ -6417,12 +6449,32 @@ button.close {
   margin-right: 3px !important;
 }
 
+.mar-r-0 {
+  margin-right: 0px !important;
+}
+
+.mar-r-5 {
+  margin-right: 5px !important;
+}
+
 .mar-r-10 {
   margin-right: 10px !important;
 }
 
 .mar-r-15 {
   margin-right: 15px !important;
+}
+
+.mar-l-0 {
+  margin-left: 0px !important;
+}
+
+.mar-l-5 {
+  margin-left: 5px !important;
+}
+
+.mar-l-10 {
+  margin-left: 10px !important;
 }
 
 .mar-l-15 {
@@ -7074,14 +7126,22 @@ textarea.form-control {
 
 .form-control:focus {
   background-color: #fff;
-  border-color: #80bdff;
+  border-color: rgba(246, 54, 100, 0.52);
   outline: 0;
-  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 3px rgba(246, 54, 100, 0.15);
 }
 
 .form-control[type="date"] {
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.input-group--search input[type="text"] {
+  min-height: 35px;
+}
+
+.input-group--search input[type="text"]:focus {
+  border-left: solid 1px rgba(246, 54, 100, 0.52) !important;
 }
 
 .input-group--search button {
@@ -7103,7 +7163,7 @@ textarea.form-control {
 }
 
 .input-group button {
-  height: 40px;
+  height: 35px;
   margin-top: -1px;
   margin-bottom: -1px;
 }
@@ -7283,6 +7343,7 @@ textarea.vertical-resize {
 
 .table-ali-custom label.wrap-custom-box {
   margin-bottom: 0;
+  transform: translateY(50%);
 }
 
 .table-ali-custom label.wrap-custom-box [class^="checkmark-"] {
@@ -7431,6 +7492,11 @@ nav .ali-pagination li a:hover {
 .colorpicker-init input[type="text"] {
   border: solid 1px #E8E9EC;
   border-radius: 4px;
+}
+
+.colorpicker-init .input-group-addon:focus,
+.colorpicker-init input[type="text"]:focus {
+  border: solid 1px rgba(246, 54, 100, 0.52) !important;
 }
 
 .colorpicker-init .input-group-addon {
@@ -7634,12 +7700,12 @@ nav .ali-pagination li a:hover {
 }
 
 .select2 {
-  height: 40px;
+  min-height: 40px;
   width: 100% !important;
 }
 
 .select2-selection {
-  height: 40px !important;
+  min-height: 40px !important;
   box-shadow: 0 0 0 0px rgba(0, 123, 255, 0.25);
   border-color: #E8E9EC !important;
 }
@@ -7683,19 +7749,56 @@ nav .ali-pagination li a:hover {
 
 .select2-container .select2-search__field {
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  box-shadow: 0 0 0 0px rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 0px 0 0 0 3px rgba(246, 54, 100, 0.15);
   padding: 0 8px !important;
   min-height: 35px;
   font-size: 13px;
-  border-color: #e0e0e0 !important;
+  border-color: rgba(246, 54, 100, 0.52) !important;
   border-radius: 4px;
 }
 
 .select2-container .select2-search__field:focus {
   background-color: #fff;
-  border-color: #e0e0e0 !important;
+  border-color: rgba(246, 54, 100, 0.52) !important;
   outline: 0;
-  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 3px rgba(246, 54, 100, 0.15);
+}
+
+.select2-container .ali-flag-slc {
+  padding-left: 40px !important;
+  display: inline-block;
+  line-height: 25px;
+  width: 100%;
+}
+
+select[multiple].select2-flag-multi + .select2 .select2-selection__rendered,
+select[multiple].select2-flag + .select2 .select2-selection__rendered {
+  line-height: inherit !important;
+  height: 100%;
+  line-height: 0px;
+}
+
+select[multiple].select2-flag-multi + .select2 .select2-selection__rendered li,
+select[multiple].select2-flag + .select2 .select2-selection__rendered li {
+  padding: 0 10px;
+}
+
+select[multiple].select2-flag-multi + .select2 .select2-selection__rendered li .select2-search__field,
+select[multiple].select2-flag + .select2 .select2-selection__rendered li .select2-search__field {
+  margin-top: 2px;
+}
+
+select[multiple].select2-flag-multi + .select2 .select2-selection__rendered .select2-selection__choice,
+select[multiple].select2-flag + .select2 .select2-selection__rendered .select2-selection__choice {
+  background: #eaeaea;
+  border-radius: 3px;
+  border-color: #b9b9b9;
+  margin-top: 6px;
+}
+
+select[multiple].select2-flag-multi + .select2 .select2-selection__rendered {
+  display: inherit !important;
+  padding: 0 6px !important;
 }
 
 .ali-modal .modal-content {
@@ -7745,6 +7848,65 @@ nav .ali-pagination li a:hover {
 
 .ali-modal .modal-footer.text-left {
   text-align: left !important;
+}
+
+.multiselect-native-select .btn-group {
+  width: 100%;
+}
+
+.multiselect-native-select .btn-group .multiselect {
+  width: 100%;
+  text-align: left;
+}
+
+.multiselect-native-select .btn-group ul.multiselect-container {
+  width: 100%;
+}
+
+.multiselect-native-select .btn-group ul.multiselect-container li {
+  padding: 0 10px;
+}
+
+.multiselect-native-select .btn-group ul.multiselect-container li label {
+  font-weight: 500;
+}
+
+.multiselect-native-select .btn-group .multiselect-selected-text {
+  display: inline-block;
+  width: 100%;
+}
+
+.multiselect-native-select .btn-group b.caret {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+}
+
+.bootstrap-multi-advance + div .input-group button,
+.bootstrap-multi-advance + div .input-group .input-group-addon,
+.bootstrap-multi-advance + div .input-group input[type="text"] {
+  min-height: 35px;
+  height: 35px;
+}
+
+.bootstrap-multi-advance + div .input-group-addon, .bootstrap-multi-advance + div .input-group-btn button {
+  border-color: #E8E9EC;
+  position: relative;
+}
+
+.bootstrap-multi-advance + div .input-group-addon:after, .bootstrap-multi-advance + div .input-group-btn button:after {
+  content: "\e946";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 12px;
+  font-family: 'icomoon' !important;
+}
+
+.bootstrap-multi-advance + div .input-group-btn button:after {
+  content: "\ec20";
 }
 
 @media only screen and (max-width: 1200px) {
@@ -7891,6 +8053,21 @@ nav .ali-pagination li a:hover {
 
 .media h4 a {
   color: #242539;
+}
+
+.media .media-left_location {
+  display: table;
+}
+
+.media .media-left_location span {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.media .media-left_location .ali-flag-slc {
+  width: 25px;
+  width: calc(25px + 10px);
+  display: inline-block;
 }
 
 .media .media-body {
