--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-/* =========================
-	Project Name: Alireviews
-	Author: PhamThong
-	Version: 1.0.0
-============================ */
 /* BASE - Base styles, variable, mixins, etc */
 @font-face {
   font-family: 'NotoSansRegular';
@@ -30,6 +25,7 @@ body {
   }
 }
 
+/* EFF - styles */
 /* 2D TRANSITIONS */
 /* BACKGROUND TRANSITIONS */
 /* BORDER TRANSITIONS */
@@ -37,9 +33,194 @@ body {
 /* SPEECH BUBBLES */
 /* ICONS */
 /* CURLS */
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-moz-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+
+@-ms-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -ms-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -ms-transform: translateY(0);
+  }
+}
+
+@-o-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@-moz-keyframes pulse {
+  0% {
+    -moz-transform: scale(1);
+  }
+  50% {
+    -moz-transform: scale(1.1);
+  }
+  100% {
+    -moz-transform: scale(1);
+  }
+}
+
+@-ms-keyframes pulse {
+  0% {
+    -ms-transform: scale(1);
+  }
+  50% {
+    -ms-transform: scale(1.1);
+  }
+  100% {
+    -ms-transform: scale(1);
+  }
+}
+
+@-o-keyframes pulse {
+  0% {
+    -o-transform: scale(1);
+  }
+  50% {
+    -o-transform: scale(1.1);
+  }
+  100% {
+    -o-transform: scale(1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  -moz-animation-name: fadeInUp;
+  -ms-animation-name: fadeInUp;
+  -o-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  -ms-animation-delay: 0.2s;
+  -o-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-timing-function: ease;
+  -ms-animation-timing-function: ease;
+  -o-animation-timing-function: ease;
+  animation-timing-function: ease;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.pulse {
+  -webkit-animation-name: pulse;
+  -moz-animation-name: pulse;
+  -ms-animation-name: pulse;
+  -o-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  -ms-animation-delay: 0.2s;
+  -o-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-timing-function: ease;
+  -ms-animation-timing-function: ease;
+  -o-animation-timing-function: ease;
+  animation-timing-function: ease;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
 /* PAGES - styles */
 /* PAGES - Contact */
 /* PAGES - Home */
+.create-reviews-page ._btn-add-page {
+  height: 40px;
+}
+
 .dashboard-general-setting-page .tagsinput {
   min-height: 160px !important;
   height: 160px !important;
@@ -1286,8 +1467,6 @@ body {
 .wrapper {
   height: 100%;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 header.main-header {
@@ -1533,7 +1712,7 @@ header.main-header .dropdown-header-menu .dropdown-menu {
 header.main-header .dropdown-header-menu .header, header.main-header .dropdown-header-menu .footer {
   position: absolute;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #f6f6ff;
   width: 100%;
   z-index: 1;
 }
@@ -1543,12 +1722,12 @@ header.main-header .dropdown-header-menu .header {
   padding-top: 10px;
   padding-bottom: 10px;
   top: 0;
-  border-bottom: solid 1px #d6d6d6;
+  border-bottom: solid 1px #eae9e9;
 }
 
 header.main-header .dropdown-header-menu .footer {
   bottom: 0;
-  border-top: solid 1px #d6d6d6;
+  border-top: solid 1px #eae9e9;
 }
 
 header.main-header .dropdown-header-menu .footer a {
@@ -1944,6 +2123,13 @@ aside.main-sidebar li.header {
   header.main-header .user-menu ul li a {
     line-height: inherit !important;
     padding: 10px 15px;
+  }
+  .product-reviews-page .wrapper-tbl-action-2 .wrap-custom-box {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .product-reviews-page .wrapper-tbl-action-2 .wrap-custom-box + div {
+    margin-left: 0;
   }
 }
 
