--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,8 +5,8 @@ body {
 .wrapper {
 	height: 100%;
     position: relative;
-    overflow-x: hidden;
-    overflow-y: auto;
+    // overflow-x: hidden;
+    // overflow-y: auto;
 }
 
 header.main-header {
@@ -262,7 +262,7 @@ header.main-header {
 		.header, .footer {
 			position: absolute;
 			text-align: center;
-			background-color: #f5f5f5;
+			background-color: #f6f6ff;
 			width: 100%;
 			z-index: 1;
 		}
@@ -272,12 +272,12 @@ header.main-header {
 		    padding-top: 10px;
 		    padding-bottom: 10px;
 		    top: 0;
-		    border-bottom: solid 1px #d6d6d6;
+		    border-bottom: solid 1px #eae9e9;
 		}
 
 		.footer {
 			bottom: 0;
-			border-top: solid 1px #d6d6d6;
+			border-top: solid 1px #eae9e9;
 
 			a {
 				display: block;
